// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tree-shake test A 1`] = `
"
  1 files built

  0 warnings
  
  0 errors
  
  ╔══════════════════════════╗
  ║  Input start             ║
  ╚══════════════════════════╝
  import { randomNumber } from 'shuutils'
  console.log('tree-shaking test A, only using randomNumber', randomNumber(1, 10))
  ╔══════════════════════════╗
  ║  Input end, output start ║
  ╚══════════════════════════╝
  // dist/shuutils.js
function randomNumber(min = 0, max = 100) {
  return Math.floor(Math.random() * (max - min + 1) + min);
}

// <stdin>
console.log("tree-shaking test A, only using randomNumber", randomNumber(1, 10));
  ╔══════════════════════════╗
  ║  Output end              ║
  ╚══════════════════════════╝"
`;

exports[`tree-shake test B 1`] = `
"
  1 files built

  0 warnings
  
  0 errors
  
  ╔══════════════════════════╗
  ║  Input start             ║
  ╚══════════════════════════╝
  import { randomNumber, randomString } from 'shuutils'
  console.log('tree-shaking test B, using randomNumber and randomString', randomNumber(1, 10), randomString(10))
  ╔══════════════════════════╗
  ║  Input end, output start ║
  ╚══════════════════════════╝
  // dist/shuutils.js
function pickOne(items) {
  if (items.length === 0) throw new Error("Array is empty");
  return items[Math.floor(Math.random() * items.length)];
}
function randomString() {
  const strings = "Bar Alto,Sin Seguritat,Lorem Ipsum,Ciao,Sit dolor,Por erestet,Tchu la Comida,Amet Inn,Aqualeris baked,Bouquet,Zu Amarillo,Ploject,Ruhe animals,Mah Plizure,Baacon pasty,Vinci mador,Alan Awake,Malohe Sutur,A priore sur,Quel memento,Kalitat arae".split(
    ","
  );
  return pickOne(strings);
}
function randomNumber(min = 0, max = 100) {
  return Math.floor(Math.random() * (max - min + 1) + min);
}

// <stdin>
console.log("tree-shaking test B, using randomNumber and randomString", randomNumber(1, 10), randomString(10));
  ╔══════════════════════════╗
  ║  Output end              ║
  ╚══════════════════════════╝"
`;

exports[`tree-shake test C 1`] = `
"
  1 files built

  0 warnings
  
  0 errors
  
  ╔══════════════════════════╗
  ║  Input start             ║
  ╚══════════════════════════╝
  import { readableTimeAgo } from 'shuutils'
  console.log('tree-shaking test C, only using readableTimeAgo', readableTimeAgo())
  ╔══════════════════════════╗
  ║  Input end, output start ║
  ╚══════════════════════════╝
  // dist/shuutils.js
var nbMsInSecond = 1e3;
var nbMsInMinute = 6e4;
var nbMsInHour = 36e5;
var nbMsInDay = 864e5;
var nbMsInWeek = 6048e5;
var nbMsInMonth = 2592e6;
var nbMsInYear = 31536e6;
var timeAgoTuples = [
  [nbMsInMinute, nbMsInSecond, "second"],
  [nbMsInHour, nbMsInMinute, "minute"],
  [nbMsInDay, nbMsInHour, "hour"],
  [nbMsInWeek, nbMsInDay, "day"],
  [nbMsInMonth, nbMsInWeek, "week"],
  [nbMsInYear, nbMsInMonth, "month"]
];
function readableTimeAgo(input, language = "en") {
  const rtf = new Intl.RelativeTimeFormat(language, { numeric: "auto" });
  const ms = typeof input === "number" ? input : Date.now() - input.getTime();
  for (const [threshold, divisor, unit] of timeAgoTuples) if (ms < threshold) return rtf.format(-Math.floor(ms / divisor), unit);
  return rtf.format(-Math.floor(ms / nbMsInYear), "year");
}

// <stdin>
console.log("tree-shaking test C, only using readableTimeAgo", readableTimeAgo());
  ╔══════════════════════════╗
  ║  Output end              ║
  ╚══════════════════════════╝"
`;

exports[`tree-shake test D 1`] = `
"
  1 files built

  0 warnings
  
  0 errors
  
  ╔══════════════════════════╗
  ║  Input start             ║
  ╚══════════════════════════╝
  import { toastSuccess } from 'shuutils'
  console.log('tree-shaking test D, using toastSuccess', toastSuccess('my message'))
  ╔══════════════════════════╗
  ║  Input end, output start ║
  ╚══════════════════════════╝
  // dist/shuutils.js
function toastHide(element, delay = 200) {
  element.style.transform = "translateX(300px)";
  setTimeout(() => {
    element.remove();
  }, delay);
}
function toastShow(element, delay = 100) {
  document.body.append(element);
  setTimeout(() => {
    element.style.transform = "translateX(0)";
  }, delay);
}
function toastAdd(type, message = "", delay = 0, padding = 20) {
  const element = document.createElement("div");
  element.setAttribute("class", "shu-toast");
  const last = document.querySelector(".shu-toast:nth-last-child(1 of .shu-toast)")?.getBoundingClientRect().top;
  const bottom = last === void 0 ? 0 : window.innerHeight - last;
  const background = type === "success" ? "forestgreen" : "firebrick";
  const icon2 = type === "success" ? "&check;" : "&cross;";
  element.style = \`position: fixed; display: flex; align-items: center; gap: 8px; bottom: \${bottom + padding}px; right: 20px; z-index: 99999; padding: 5px 14px 6px 10px; background-color: \${background}; color: white; border-radius: 7px; box-shadow: 0 0 1rem rgba(0, 0, 0, 0.5); font-size: 18px; transition: transform 0.2s ease-in-out; transform: translateX(300px);\`;
  element.innerHTML = \`<span style="border-radius: 50%; border: 1px solid #ffffff90; width: 20px; height: 20px; text-align: center; font-size: 12px;">\${icon2}</span><span style="margin-top: -1px;">\${message}</span>\`;
  toastShow(element);
  if (delay > 0)
    setTimeout(() => {
      toastHide(element);
    }, delay);
}
function toastSuccess(message, delay = 2e3) {
  toastAdd("success", message, delay);
}

// <stdin>
console.log("tree-shaking test D, using toastSuccess", toastSuccess("my message"));
  ╔══════════════════════════╗
  ║  Output end              ║
  ╚══════════════════════════╝"
`;
